# coreason_etl_fda_orange_book

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  debug_paths.py  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: docker.yml
docs/: index.md
src/coreason_etl_fda_orange_book/: __init__.py  config.py  exceptions.py  main.py  source.py
src/coreason_etl_fda_orange_book/bronze/: __init__.py  ingestion.py
src/coreason_etl_fda_orange_book/gold/: ingestion.py  logic.py  models.py
src/coreason_etl_fda_orange_book/silver/: ingestion.py  models.py  transform.py
src/coreason_etl_fda_orange_book/utils/: __init__.py  logger.py
tests/: test_bronze_advanced_ingestion.py  test_bronze_edge_cases.py  test_bronze_ingestion.py  test_bronze_resilience.py  test_cleanup.py  test_cli.py  test_complex_scenarios.py  test_compliance.py  test_config.py  test_coverage_gaps.py  test_data_integrity.py  test_gold.py  test_gold_logic_complex.py  test_integration_bronze.py  test_integration_gold.py  test_integration_silver.py  test_main.py  test_missing_columns.py  test_models.py  test_silver_edge_cases.py  test_silver_transform.py  test_source.py  test_source_advanced_edge_cases.py  test_source_errors.py  test_source_hashing.py  test_source_mapping.py  test_strict_validation.py  test_system_resilience.py  test_transform_helpers.py
