[tool.poetry]
name = "coreason-etl-fda-orange-book"
version = "0.1.0"
description = "A robust ETL pipeline for ingesting and harmonizing FDA Orange Book data"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_etl_fda_orange_book", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
dlt = {extras = ["postgresql"], version = "^1.20.0"}
polars = "^1.36.1"
pydantic = "^2.12.5"
requests = "^2.32.5"
curl-cffi = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
types-requests = "^2.32.4.20250913"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason-etl-fda-orange-book"
version = "0.1.0"
description = "A robust ETL pipeline for ingesting and harmonizing FDA Orange Book data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_etl_fda_orange_book"
Repository = "https://github.com/CoReason-AI/coreason_etl_fda_orange_book"
Documentation = "https://github.com/CoReason-AI/coreason_etl_fda_orange_book"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
